--- a/mydoc/src/Popup.css
+++ b/mydoc/src/Popup.css
@@ -4,9 +4,17 @@
     left: 0;
     width:100%;
     height:100vh;
-    background-color: white;
+    background-color: #f8f8f8f8;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1;
+    
+}
+.report__child{
+    padding: 100px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12) , 0 4px 10px rgba(0,0,0,0.24) ;
+    border: 1px solid black;
 }
