--- a/mydoc/src/Header.css
+++ b/mydoc/src/Header.css
@@ -7,7 +7,7 @@
 }
 .header{
     height: 70px;
-  background: #f0f0f0;;
+  background: #e0dfdf;;
   display: flex;
   align-items:center;
   padding:0 36px;
@@ -22,14 +22,20 @@
   border-radius:50%;
   cursor:pointer
 }
+Link>a{
+    text-decoration: none !important;
+}
 .header__link{
     display:flex;
     align-items:center;
     padding:0 12px;
     cursor:pointer;
+    color: black;
+    text-decoration: none !important;  
 }
 .header__link>img{
     height:20px;
+    fill: black !important;
 }
 span{
     font-size:13px;
